# gw2-api-interface

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
client/: __init__.py
client/objects/: base_object.py
client/objects/api_version_1/: __init__.py
client/objects/api_version_2/: __init__.py
gw2api/: __init__.py
gw2api/objects/: base_object.py
gw2api/objects/api_version_1/: README.md  __init__.py
gw2api/objects/api_version_2/: README.md  __init__.py
main/: client.py
main/objects/: base_object.py
main/objects/api_version_1/: __init__.py
main/objects/api_version_2/: __init__.py
test/: conftest.py  test_account.py  test_basics.py  test_commerce.py  test_commerceexchange.py  test_continents.py
test/mocks/: account.json  account_achievements.json  account_achievements_multiple_ids.json  account_achievements_pagesize1.json  account_bank.json  account_dailycrafting.json  coinstogems_quantity100000.json  commerce_currentsells.json  commerce_historybuys.json  commerce_historysells.json  commerce_transactions.json  commerce_transactions_secondlevel.json  continents1_2.json  continents2.json  continents2floors.json  continents2floors15.json  continents2floors15regions.json  continents2floors1_6.json  continents2floors1regions6_7.json  continents2floors1regions6maps350_549_900.json  continents2floors1regions7maps38sectors833_834.json  gemstocoins_quantity100.json  invalid_endpoint.json
